--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button id="btnDelete">Eliminar base</button>
       <button id="btnPrint">Imprimir</button>
       <button id="btnInsert">Insertar</button>
-      <button id="btnRoad">Recorrido</button>
+      <button id="btnTravel">Recorrido</button>
     </div>
     <div>
       <h2>Mensajes</h2>
